# CozmikC1zzl3

./: .gitignore  AGENTS.md  C1ZZL3.cpp  C1ZZL3_LUT.cpp  C1ZZL3_Lut.cpp  C1ZZL3_Oscillator.h  C1ZZL3_quick_reference.txt  C1ZZl3_LUT.h  CARD_README.md  CIZZLE.cpp  CMakeLists.txt  FUTURE_NOTES.md  MakeLists.txt  README.md  SKILL_DEPLOYMENT_RULESET.md  WAVEFORM_TUNING.md  computercard.h  cosineLUT.cpp  index.html  info.yaml  sine_LUT.cpp  yaml.info
.github/workflows/: pages.yml
archive/current-rollback/: C1ZZL3_current_rollback_20260616.cpp
archive/finder-metadata/: DS_Store_experimental_20260616  DS_Store_info_yaml_updates  DS_Store_root  DS_Store_root_2039  DS_Store_web-midi
archive/production-1.0-20260706/: C1ZZL3.cpp
archive/production-1.3-pre-pitch-envelope-20260718/: README.md  cz_import_app_1.3.js  editor_app_1.3.js  editor_index_1.3.html
archive/rollback-audio-tuning-20260717/: README.md
backups/main_before_web_midi_production_20260613_2136/: CMakeLists.txt  SHA256SUMS.txt  usb_descriptors.c
backups/promote_detune_log_20260611_232956/: C1ZZL3_web_midi_before_detune_log_promotion.uf2
backups/promote_midi_20260611_224100/: C1ZZL3_experimental_last_good.uf2
backups/revert_log_detune_20260611_234048/: C1ZZL3_bad_log_detune.cpp  C1ZZL3_experimental_bad_log_detune.cpp
backups/rollback_with_tap_tempo_20260615/: SHA256SUMS.txt
backups/turing_cv_persist_20260611_225628/: C1ZZL3_before_turing_cv_persist.uf2
experimental-firmware/: README.md
experimental-firmware/active-uf2s/: C1ZZL3_CURRENT_FALLBACK_GNARLY_V10.uf2  C1ZZL3_EXPERIMENT_CZ_RECIPE_WAVE_BANKS_PROTOCOL_V11.uf2  C1ZZL3_EXPERIMENT_DUAL_AMPLITUDE_ENVELOPES_PROTOCOL_V5.uf2  C1ZZL3_EXPERIMENT_DUAL_AMPLITUDE_ENVELOPES_PROTOCOL_V6.uf2  C1ZZL3_EXPERIMENT_DUAL_OSCILLATOR_LANES_PROTOCOL_V4.uf2  C1ZZL3_EXPERIMENT_FULL_DUAL_OSCILLATORS_PROTOCOL_V8.uf2  C1ZZL3_EXPERIMENT_FULL_DUAL_OSCILLATORS_PROTOCOL_V9.uf2  C1ZZL3_GNARLY_DUAL_OSCILLATOR_UI_PROTOCOL_V10.uf2  C1ZZL3_PRODUCTION_1.4.uf2  C1ZZL3_ROLLBACK_DUAL_AMPLITUDE_PROTOCOL_V6.uf2  README.md  SHA256SUMS.txt
experimental-firmware/cz-recipe-wave-banks-v11/: C1ZZL3.cpp  C1ZZL3_CZ_RECIPE_WAVE_BANKS_PROTOCOL_V11.uf2  CMakeLists.txt  README.md  computercard.h  info.yaml
experimental-firmware/dual-amplitude-envelopes/: C1ZZL3.cpp  C1ZZL3_DUAL_AMPLITUDE_ENVELOPES_PROTOCOL_V5.uf2  C1ZZL3_DUAL_AMPLITUDE_ENVELOPES_PROTOCOL_V6.uf2  README.md  (+2 more)
experimental-firmware/full-dual-oscillators/: C1ZZL3.cpp  C1ZZL3_FULL_DUAL_OSCILLATORS_PROTOCOL_V7.uf2  C1ZZL3_FULL_DUAL_OSCILLATORS_PROTOCOL_V9.uf2  CMakeLists.txt  README.md  SHA256SUMS.txt  tusb_config.h
experiments/: README.md
scripts/: generate_pd_wave_lut.py
uf2/: C1ZZL3.uf2  C1ZZL3_web_midi_delete_slots_production_20260615.uf2  C1ZZL3v03working.uf2  SHA256SUMS.txt
web-midi/: README.md  WEB_APP_CHECKLIST.md  protocol.md
(+305 files in other folders)
